Kubernetes/network-policy/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
  labels:
    app: cache
spec:
  selector:
    app: cache
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
